@@ -5579,7 +5579,7 @@
   </element>
   <element>
     <fullpath>include/themes.inc.php</fullpath>
-    <version>1.6.04</version>
+    <version>1.6.06</version>
     <status>mandatory</status>
     <permission>read</permission>
     <hash>31f7b355f004cb59233af603b70ef281</hash>
