@@ -8,7 +8,7 @@
  * @license    GNU General Public License version 3 or later; see LICENSE
  *
  * include/themes.inc.php
- * @since  1.6.04
+ * @since  1.6.06
  */
 
 /////////////////////////////////////////////////////////////////
@@ -3282,7 +3282,7 @@ function theme_html_picture()
     }
 
     if ($mime_content['content']=='image') {
-        list($image_size['width'], $image_size['height'], , $image_size['geom']) = cpg_getimagesize(urldecode($picture_url));
+        list($image_size['width'], $image_size['height'], , $image_size['geom']) = cpg_getimagesize($picture_url);
 
         if ($CURRENT_PIC_DATA['mode'] != 'fullsize') {
             $winsizeX = $CURRENT_PIC_DATA['pwidth'] + $CONFIG['fullsize_padding_x'];  //the +'s are the mysterious FF and IE paddings
